# probearbeit

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  main.py  presentation.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DEMO_SCRIPT.md  REQUIREMENTS_TRACE.md  RUNBOOK.md  WORKLOG.md
k8s/: configmap.yaml  deployment.yaml  ingress.yaml  secret.example.yaml  service.yaml
reveal/: README.md  index.html  slides.md
scripts/: smoke_test.sh
src/ai_messenger_voicemail/: __init__.py  app.py  config.py  models.py  security.py  store.py
src/ai_messenger_voicemail/services/: __init__.py  llm_service.py  telegram_service.py  voice_service.py
tests/: conftest.py  test_app.py  test_store.py  test_telegram_service.py
