[project]
name = "ai-messenger-voicemail"
version = "0.2.0"
description = "AI-powered voice mailbox for messenger notifications"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.116.1",
  "httpx>=0.28.1",
  "openai>=2.5.0",
  "pydantic-settings>=2.11.0",
  "python-multipart>=0.0.20",
  "twilio>=9.8.3",
  "uvicorn[standard]>=0.35.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.2",
  "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_messenger_voicemail"]
